--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "express": "^4.17.1",
     "fixturez": "^1.1.0",
     "got": "^11.8.2",
-    "test-listen": "^1.1.0",
-    "uuid": "^8.3.2"
+    "test-listen": "^1.1.0"
   },
   "prettier": "@jvdx/prettier-config",
   "prettierIgnore": [
