--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "test": "./Taskfile.sh test"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^2.1.0",
-    "@google-cloud/storage": "^5.16.1",
-    "@hapi/accept": "^5.0.2",
+    "@google-cloud/functions-framework": "^3.1.1",
+    "@google-cloud/storage": "^6.0.1",
+    "@hapi/accept": "^6.0.0",
     "cors": "^2.8.5",
     "get-stream": "^6.0.1",
-    "sharp": "^0.29.3"
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
-    "@jvdx/core": "^2.9.2",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "@jvdx/core": "^2.17.0",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
     "fixturez": "^1.1.0",
-    "got": "^11.8.3",
-    "test-listen": "^1.1.0"
+    "test-listen": "^1.1.0",
+    "undici": "^5.4.0"
   },
   "prettier": "@jvdx/prettier-config",
   "prettierIgnore": [
