--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,7 +8,7 @@ jobs:
   main:
     strategy:
       matrix:
-        node: [12, 14, 15]
+        node: [16]
     runs-on: ubuntu-latest
     steps:
       - name: 🛑 Cancel Previous Runs
